--- a/labs/5-malloc+gc/1-malloc/Makefile
+++ b/labs/5-malloc+gc/1-malloc/Makefile
@@ -1,11 +1,11 @@
 PROGS += 0-test-malloc.c
 PROGS += 2-test-malloc.c
 
-COMMON_SRC = pi-sbrk.c
+#COMMON_SRC = pi-sbrk.c
 
 # swap these
-# COMMON_SRC += kr-malloc.c 
-STAFF_OBJS = staff-kr-malloc.o
+COMMON_SRC += kr-malloc.c 
+#STAFF_OBJS = staff-kr-malloc.o
 
 
 RUN=1
