--- a/labs/6-debug-alloc/code/Makefile
+++ b/labs/6-debug-alloc/code/Makefile
@@ -1,11 +1,11 @@
 # if you want to work on one at a time.
-PROGS := tests/part1-test0-bug.c     
-PROGS := tests/part1-test1-no-bug.c  
-PROGS := tests/part1-test2-bug.c     
-PROGS := tests/part1-test3-bug.c	
-PROGS := tests/part1-test4-bug.c
-PROGS := tests/part1-test5-no-bug.c
-PROGS := tests/part1-test6-bugs.c
+#PROGS := tests/part1-test0-bug.c     
+#PROGS := tests/part1-test1-no-bug.c  
+#PROGS := tests/part1-test2-bug.c     
+#PROGS := tests/part1-test3-bug.c	
+#PROGS := tests/part1-test4-bug.c
+#PROGS := tests/part1-test5-no-bug.c
+#PROGS := tests/part1-test6-bugs.c
 
 # all the tests.
 PROGS := $(wildcard tests/part1-test[0-9]*.c)
@@ -13,8 +13,8 @@ PROGS := $(wildcard tests/part1-test[0-9]*.c)
 #COMMON_SRC = kr-malloc.c
 STAFF_OBJS += staff-kr-malloc.o
 
-# COMMON_SRC += ckalloc.c
-STAFF_OBJS += staff-ckalloc.o
+COMMON_SRC += ckalloc.c
+#STAFF_OBJS += staff-ckalloc.o
 
 #COMMON_SRC += ck-gc.c
 STAFF_OBJS += staff-ck-gc.o
