--- a/labs/7-imu-i2c/code/Makefile
+++ b/labs/7-imu-i2c/code/Makefile
@@ -1,9 +1,11 @@
-PROGS = driver-gyro.c
+#PROGS = driver-gyro.c
 PROGS = driver-accel.c
-
+#PROGS = temp.c
 # when you build yours swap this.
-# COMMON_SRC = mpu-6050.c
-STAFF_OBJS += staff-mpu-6050.o
+COMMON_SRC = mpu-6050.c
+COMMON_SRC += mbox.c
+COMMON_SRC += i2c.c
+#STAFF_OBJS += staff-mpu-6050.o
 
 # set to 0 if you don't want it to automatically run.
 RUN=1
