--- a/labs/9-profiler/code/Makefile
+++ b/labs/9-profiler/code/Makefile
@@ -5,7 +5,7 @@ PROGS += tests/0-prof-test.c
 PROGS += tests/0-reg-test.c
 
 # when you want to start profiling
-# PROGS := tests/1-prof-test.c
+PROGS := tests/1-prof-test.c
 
 COMMON_SRC := ss-pixie.c
 COMMON_SRC += ss-pixie-asm.S
@@ -20,6 +20,11 @@ STAFF_OBJS += staff-breakpoint.o
 BOOTLOADER=my-install
 RUN = 1
 # CAN_EMIT=1
+
+LIBS += $(LGCC)
+LIB_POST := $(LGCC)
+LIBS += $(LIBM)
+LIB_POST += $(LIBM_INC)
 
 EXCLUDE ?= grep -v simple_boot
 include $(CS240LX_2025_PATH)/libpi/mk/Makefile.robust-v2
