--- a/labs/9-profiler/code/Makefile
+++ b/labs/9-profiler/code/Makefile
@@ -1,11 +1,11 @@
 # very simple tests. start here.
 
 PROGS := tests/0-nop-test.c
-PROGS += tests/0-prof-test.c
-PROGS += tests/0-reg-test.c
+#PROGS += tests/0-prof-test.c
+#PROGS += tests/0-reg-test.c
 
 # when you want to start profiling
-PROGS := tests/1-prof-test.c
+#PROGS := tests/1-prof-test.c
 
 COMMON_SRC := ss-pixie.c
 COMMON_SRC += ss-pixie-asm.S
