--- a/labs/13-ws2812b/code/Makefile
+++ b/labs/13-ws2812b/code/Makefile
@@ -3,11 +3,11 @@ PROGS = 2-neopix.c
 # do this second:
 PROGS = 1-blink.c  
 # do this first.
-PROGS = 0-timing-check.c 
+#PROGS = 0-timing-check.c 
 
 # if you want to use our code for <2-neopix.c>, 
 # swap these
-# STAFF_OBJS := staff-neopixel.o
+#STAFF_OBJS := staff-neopixel.o
 COMMON_SRC := neopixel.c
 
 OPT_LEVEL = -O2
