--- a/labs/14-stepper-motor/alex-code/Makefile
+++ b/labs/14-stepper-motor/alex-code/Makefile
@@ -1,11 +1,11 @@
 # list out the driver program source 
 
 PROGS = stepper-test.c
-COMMON_SRC := stepper.c stepper-int.c
+COMMON_SRC := stepper.c stepper-int.c stepper-music.c
 
 RUN = 1
 
-LIB_POST := $(CS240LX_2024_PATH)/lib/libgcc.a
+LIB_POST := $(CS240LX_2025_PATH)/lib/libgcc.a
 LIBS += $(LIB_POST)
 # include $(CS240LX_2024_PATH)/libpi/mk/Makefile.template-fixed
 include $(CS240LX_2025_PATH)/libpi/mk/Makefile.robust
